--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -41,14 +41,20 @@ nav{
 }
 @media all and (max-device-width:992px){ 
  
- 
-    nav ul {justify-content: space-around;
-display: flex;}
+ .threeparts{
+    display: none !important;
+ }
+    nav ul {
+        justify-content: space-around;
+    display: flex;  
+    
+}
 
 .logo{
+    text-align: center;
     justify-content: center !important;
     width: 100% !important;
-    margin-left: 21% !important;
+    margin-left: 0% !important;
     font-weight: 900;
     font-size: 158%;
     margin-top: 0px;
@@ -61,9 +67,12 @@ flex-wrap: wrap !important;
 }
 
 .connection {
-    height: 35px;
+    height: 40px;
 }
 
+nav li{
+    font-size: 130%;
+}
 
 .firstleft{
     width: 60% !important;
@@ -125,7 +134,7 @@ margin-left: 13%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-right: 30%;
+    padding-right: 0%;
 }
 
 
