--- a/css/normalise.css
+++ b/css/normalise.css
@@ -29,10 +29,15 @@ a {
 h1 {
   color: rgb(255, 255, 255);
   font-size: 10vh;
-  line-height: 4vh;
+  line-height: 10vh;
   font-weight: 700;
   padding: 0%;
   margin: 0%;
+  text-align: center;
+  
+}
+h3{
+  text-align: center;
 }
 
 h5 {
