--- a/template/partners.html
+++ b/template/partners.html
@@ -47,8 +47,12 @@
 
 
 <section class="partenaire">
-    <h5 class="sbtitle">Discover the current campaigns</h5>
-    <h1 class="sectiontitle2">campaigns</h1>
+    <h5 class="sbtitlewhite">Discover the current campaigns</h5>
+    <h1 class="sectiontitlepartners">campaigns</h1>
+    <div class="balance"> 
+        Total posts : 0 </br>Total rewards : 0 fjqjgkqdg</br>Last 24H posts : 0</br>Last 24H rewards :
+        0 fjqjgkqdg
+    </div>
 
     <div class="rightpartners">
         <div class="imgpartners"> <img src="../images/image (1).jpg" alt=""></div>
@@ -147,10 +151,11 @@
     <section class="mainsection thepartne">
         <h1 class="sectiontitle">PARTNERS</h1>
         <div class="testouille">
+           
             <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
+                <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -165,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
@@ -196,7 +201,7 @@
             <div class="col-md-4 col-sm-6 team-wrap">
                 <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (2).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -211,16 +216,16 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CUBIST</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
             <!-- end team member -->
 
             <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
+                <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -235,18 +240,22 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
+            <!-- end team member -->
+
+        
             <!-- end team member -->
 
         </div>
         <div class="testouille">
+           
             <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
+                <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -261,7 +270,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
@@ -292,7 +301,7 @@
             <div class="col-md-4 col-sm-6 team-wrap">
                 <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (2).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -307,16 +316,16 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CUBIST</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
             <!-- end team member -->
 
             <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
+                <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -331,18 +340,21 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
             <!-- end team member -->
 
-        </div>
-        <div class="testouille">
+        
+            <!-- end team member -->
+
+        </div><div class="testouille">
+           
             <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
+                <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -357,7 +369,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
+                    <h6 class="team-title">Corrupted dog</h6>
 
                 </div>
             </div>
@@ -388,79 +400,6 @@
             <div class="col-md-4 col-sm-6 team-wrap">
                 <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (2).jpg" alt="">
-                        <div class="overlay">
-                            <div class="team-details text-center">
-                                <p>
-                                    Our web design team will spend time with our digital marketing team.
-                                </p>
-                                <div class="socials mt-20">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <h6 class="team-title">CUBIST</h6>
-
-                </div>
-            </div>
-            <!-- end team member -->
-
-            <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
-                    <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
-                        <div class="overlay">
-                            <div class="team-details text-center">
-                                <p>
-                                    Our web design team will spend time with our digital marketing team.
-                                </p>
-                                <div class="socials mt-20">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
-
-                </div>
-            </div>
-            <!-- end team member -->
-
-        </div>
-        <div class="testouille">
-            <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
-                    <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
-                        <div class="overlay">
-                            <div class="team-details text-center">
-                                <p>
-                                    Our web design team will spend time with our digital marketing team.
-                                </p>
-                                <div class="socials mt-20">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
-
-                </div>
-            </div>
-            <!-- end team member -->
-            <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member text-center">
-                    <div class="team-img">
                         <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
@@ -480,11 +419,12 @@
 
                 </div>
             </div>
+            <!-- end team member -->
 
             <div class="col-md-4 col-sm-6 team-wrap">
                 <div class="team-member text-center">
                     <div class="team-img">
-                        <img src="../images/image (2).jpg" alt="">
+                        <img src="../images/image.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
@@ -499,34 +439,13 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">CUBIST</h6>
+                    <h6 class="team-title white">Corrupted dog</h6>
 
                 </div>
             </div>
             <!-- end team member -->
 
-            <div class="col-md-4 col-sm-6 team-wrap">
-                <div class="team-member last text-center">
-                    <div class="team-img">
-                        <img src="../images/image (1).jpg" alt="">
-                        <div class="overlay">
-                            <div class="team-details text-center">
-                                <p>
-                                    Our web design team will spend time with our digital marketing team.
-                                </p>
-                                <div class="socials mt-20">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <h6 class="team-title">CAT CARTEL</h6>
-
-                </div>
-            </div>
+        
             <!-- end team member -->
 
         </div>
