--- a/css/normalise.css
+++ b/css/normalise.css
@@ -47,6 +47,10 @@ h5 {
   padding-bottom: 1%;
 }
 
+.sbtitlewhite{
+  color: #F2F2F2;
+}
+
 h4 {
   text-decoration: underline;
 }
@@ -99,12 +103,14 @@ button {
   align-items: center;
   justify-content: center;
   border: 0px;
-  border-radius: 2.25rem;
+  border-radius: 10px;
   padding: 1rem 3rem;
   font-size: 1rem;
   text-align: center;
   background-color: rgb(0, 0, 0);
   color: white;
+  font-family: 'Space Grotesk', sans-serif;
+  font-weight: 700;
 
 }
 
@@ -136,5 +142,35 @@ button {
   h1 {
     font-size: 5vh !important;
     line-height: 6vh !important;
+  }
+.card{ 
+  background-color: #F2F2F2;
+  margin-top: 23%;
+  border-radius: 2.15em;
+  padding: 6%;
+  padding-bottom: 5%;
+  color: black;
+}
+}
+@media all and (max-device-width:600px) {
+
+  .card{ 
+    background-color: #F2F2F2;
+    margin-top: 30%;
+    border-radius: 2.15em;
+    padding: 6%;
+    padding-bottom: 5%;
+    color: black;
+  }
+}
+
+@media all and (max-device-width:450px) {
+  .card{ 
+    background-color: #F2F2F2;
+    margin-top: 43%;
+    border-radius: 2.15em;
+    padding: 6%;
+    padding-bottom: 5%;
+    color: black;
   }
 }
