--- a/css/profile.css
+++ b/css/profile.css
@@ -66,9 +66,10 @@ color: black;
     border: 1px solid rgb(0, 0, 0);
     background-color: #fff;
     border-radius: 10px;
-    padding: 3%;
+    padding: 1%;
     width: 300px ;
     color: black;
+    height: 69px;
 }
 
 .profile h3{
