--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -266,6 +266,7 @@ footer{
     background-color: #F2F2F2;
     border-top-left-radius: 2.25rem;
     border-top-right-radius: 2.25rem;
+    width: 100%;
 }
 
 .footleft{
@@ -298,7 +299,6 @@ footer{
     display: flex;
     display: flex;
     justify-content: center;
-
     align-items: center;
 }
 
@@ -324,6 +324,7 @@ color: black;
 }
 .help a{
    color: black;
+  justify-content: flex-start;
    }
    .help h3{
     margin-bottom: 10%;
@@ -392,5 +393,14 @@ color: black;
     padding-left: 0px;
 }
 
+.help a{
+    color: black;
+   justify-content: center;
+    }
+
+
+  
+     
+    
 }
 /* END FOOTER */
