--- a/css/profile.css
+++ b/css/profile.css
@@ -132,13 +132,31 @@ position: relative;
     border-radius: 10px;
     border: 1px solid black;
     background-color: aliceblue;
- 
-    margin: 0% 30%;
+    margin: 42px 20% 0% 20%;
     padding: 1%;
     font-weight: 900;
     font-size: larger;
     margin-bottom: 6%;
     color: black;
+    width: 50%;
+ 
+}
+
+.buttonpageleft{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: aliceblue;
+ 
+    margin: 0% 20%;
+    padding: 1%;
+    font-weight: 900;
+    font-size: larger;
+    margin-bottom: 6%;
+    color: black;
+    width: 50%;
  
 }
 .statboard{
@@ -151,6 +169,11 @@ position: relative;
     justify-content: space-around;
 }
 
+
+.doublebouton h3{
+    padding: 0% 3%;
+
+}
 
 .yourpagetheincentive{
     width: 50%;
