--- a/template/configure.html
+++ b/template/configure.html
@@ -26,26 +26,21 @@
 
     <header>
         <nav>
-
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <p class="logo">THE INCENTIVE</p>
                 </a>
             </div>
+            <li class="link">
+                <a href="../template/partners.html" class="navigation"> partners</a>
+            </li>
+            <li class="link">
+                <a href="../template/profile.html" class="navigation connection"><button class="button2">Dashboard</button></a>
+            </li>
+            <li class="link">
+                <a href="" class="navigation connection"><button class="button2">Connect</button></a>
+            </li>
 
-
-            <li class="link">
-                <a href="template/partners.html" class="navigation connection"><img src="images/utilisateur.png"></a>
-            </li>
-            <li class="link">
-                <a href="template/partners.html" class="navigation"> partners</a>
-            </li>
-            <li class="link">
-                <a href="template/partners.html" class="navigation"> Roadmap</a>
-            </li>
-            <li class="link">
-                <a href="template/partners.html" class="navigation"> FAQ</a>
-            </li>
 
         </nav>
     </header>
@@ -106,29 +101,26 @@
 
 
 
-
-
     <footer>
         <div class="footleft">
             <div class="footerlogo">
                 <p id="logo">THE INCENTIVE</p>
             </div>
             <div class="social">
-                <a href=""> <img src="images/discorde.png" alt=""></a>
-                <a href=""> <img class="logosociaux" src="images/twitter.png" alt=""></a>
+                <a href="http://discord.gg/SsNcMV2scb"> <img src="../images/discorde.png" alt=""></a>
+                <a href="https://twitter.com/The_Incentive"> <img class="logosociaux" src="../images/twitter.png" alt=""></a>
             </div>
         </div>
         <div class="help">
             <ul>
                 <h3>HELP</h3>
-
+    
                 <li> <a href="" class="contact">Contact</a></li>
                 <li> <a href="" class="faq">FAQ</a></li>
                 <li> <a href="" class="myaccount">My Account</a></li>
             </ul>
         </div>
     </footer>
-
 
 
 </body>
