--- a/template/profile.html
+++ b/template/profile.html
@@ -7,7 +7,7 @@
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link href="css/profile.css" rel="stylesheet" type="text/css">
+    <link href="../css/profile.css" rel="stylesheet" type="text/css">
     <link href="/css/header-footer.css" rel="stylesheet" type="text/css">
     <link href="/css/normalise.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -24,29 +24,27 @@
 <body>
 
     <header>
+
         <nav>
 
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <p class="logo">THE INCENTIVE</p>
                 </a>
             </div>
+            <li class="link">
+                <a href="../template/partners.html" class="navigation"> partners</a>
+            </li>
+            <li class="link">
+                <a href="../template/profile.html" class="navigation connection"><button class="button2">Dashboard</button></a>
+            </li>
+            <li class="link">
+                <a href="" class="navigation connection"><button class="button2">Connect</button></a>
+            </li>
 
-
-            <li class="link">
-                <a href="template/partners.html" class="navigation connection"><img src="images/utilisateur.png"></a>
-            </li>
-            <li class="link">
-                <a href="template/partners.html" class="navigation"> partners</a>
-            </li>
-            <li class="link">
-                <a href="template/partners.html" class="navigation"> Roadmap</a>
-            </li>
-            <li class="link">
-                <a href="template/partners.html" class="navigation"> FAQ</a>
-            </li>
 
         </nav>
+
     </header>
 
 
@@ -108,7 +106,7 @@
             <div class="yourpagetheincentive">
                 <h3> Here is your The Incentive page, you can send this page directly to your customers.</h3>
 
-                <a href="/lp/krtgzoi/" target="_blank" class="buttonpage"> Your Incentive page
+                <a href="/lp/krtgzoi/" target="_blank" class="buttonpageleft"> Your Incentive page
 
             
             </a>
@@ -137,21 +135,20 @@
                 <p id="logo">THE INCENTIVE</p>
             </div>
             <div class="social">
-                <a href=""> <img src="images/discorde.png" alt=""></a>
-                <a href=""> <img class="logosociaux" src="images/twitter.png" alt=""></a>
+                <a href="http://discord.gg/SsNcMV2scb"> <img src="../images/discorde.png" alt=""></a>
+                <a href="https://twitter.com/The_Incentive"> <img class="logosociaux" src="../images/twitter.png" alt=""></a>
             </div>
         </div>
         <div class="help">
             <ul>
                 <h3>HELP</h3>
-
+    
                 <li> <a href="" class="contact">Contact</a></li>
                 <li> <a href="" class="faq">FAQ</a></li>
                 <li> <a href="" class="myaccount">My Account</a></li>
             </ul>
         </div>
     </footer>
-
 
 
 </body>
