--- a/template/profile.html
+++ b/template/profile.html
@@ -52,7 +52,7 @@
  <h5 class="sbtitlewhite">is here for monitoring</h5>
         <h1>Dashboard</h1>
         <div class="rewards">
-            <h3>To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
+            <h3 class="explication">To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
                 Please fund it with your token and sol (fees).
 
             </h3>
@@ -77,8 +77,9 @@
                         <div class="figure"><img src="/images/discord_card.png" alt=""></div>
                         <h2>Raid to earn</h2>
                     </div>
+                </a>
             </div>
-            </a>
+           
             <a href="discordbot.html">
                 <div class="buttondiscord">
                     <div class="discord">
@@ -112,7 +113,7 @@
             </a>
         </div>
         </div>
-    </section>
+  
 
 
 
@@ -150,5 +151,5 @@
         </div>
     </footer>
 
-
+</section>
 </body>
