--- a/template/discordbot.html
+++ b/template/discordbot.html
@@ -7,7 +7,7 @@
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link href="css/discord.css" rel="stylesheet" type="text/css">
+    <link href="../css/discord.css" rel="stylesheet" type="text/css">
     <link href="/css/header-footer.css" rel="stylesheet" type="text/css">
     <link href="/css/normalise.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -63,7 +63,7 @@
             
            </div>
 
-        <a href="https://discord.com/api/oauth2/authorize?response_type=code&amp;client_id=976858244410654730&amp;permissions=133120&amp;scope=bot&amp;redirect_uri=http://localhost:8000/discord/configure/&amp;prompt=consent" class="buttondiscord">Add bot to Discord</a>
+        <a href="https://discord.com/api/oauth2/authorize?response_type=code&amp;client_id=976858244410654730&amp;permissions=133120&amp;scope=bot&amp;redirect_uri=http://localhost:8000/discord/configure/&amp;prompt=consent"><div class=" buttondiscord">Add bot to Discord</div></a>
 </section>
 
 
