--- a/css/accueil.css
+++ b/css/accueil.css
@@ -242,7 +242,7 @@ h2 {
 }
 
 details p {
-  padding: 0 25px 15px 25px;
+  padding: 26px 25px 15px 25px;
   margin: 0;
   text-shadow: none;
   text-align: justify;
@@ -578,7 +578,7 @@ details summary::-webkit-details-marker {
   padding-left: 10%;
   width: 50px;
   height: auto;
-  color: rgba(255, 255, 255, 0.383);
+  color: rgb(255, 255, 255);
 
 }
 
