--- a/css/profile.css
+++ b/css/profile.css
@@ -16,7 +16,7 @@
     align-items: center;
     padding: 0% 25%;
     text-align: center;
-    font-size: larger;
+    font-size: 20px;
     font-weight: 800;
 }
 
@@ -54,6 +54,7 @@ color: black;
     padding: 3%;
     width: 200px;
     background-color: white;
+    margin: 2%;
     
 }
 
@@ -92,6 +93,7 @@ color: black;
     text-align: center;
     font-size: larger;
     font-weight: 800;
+    font-size: 90%;
 }
 
 
