--- a/template/profile.html
+++ b/template/profile.html
@@ -74,7 +74,7 @@
                 </a>
                 <a href="" class="raid">
                     <div class="buttonblanc">
-                        <div class="figure"><img src="/images/discord_card.png" alt=""></div>
+                        <div class="figure"><img src="/images/discorde.png" alt=""></div>
                         <h2>Raid to earn</h2>
                     </div>
                 </a>
@@ -105,7 +105,7 @@
 
             </div>
             <div class="yourpagetheincentive">
-                <h3> Here is your The Incentive page, you can send this page directly to your customers.</h3>
+                <h3> Here is your Incentive page, you can send this page directly to your customers.</h3>
 
                 <a href="/lp/krtgzoi/" target="_blank" class="buttonpageleft"> Your Incentive page
 
