--- a/css/accueil.css
+++ b/css/accueil.css
@@ -261,6 +261,9 @@ details summary::-webkit-details-marker {
   display: none;
 }
 
+.fa-chevron-down{
+  padding-right: 30px;
+}
 
 /* END FAQ */
 
@@ -513,8 +516,8 @@ details summary::-webkit-details-marker {
 }
 
 .timeline ul li:hover:before {
-  background-color: #ffffff;
-  box-shadow: 0px 0px 10px 2px #909090;
+  background-color: #e5e5e5;
+  box-shadow: 0px 0px 10px 2px #ffffff;
 }
 
 .contentroad {
