--- a/css/accueil.css
+++ b/css/accueil.css
@@ -46,9 +46,7 @@
   margin-top: 5%;
 }
 
-.TRYIT:hover {
-  background-color: rgb(42, 42, 42);
-}
+
 
 .firstexplication {
   padding: 0px 4%;
@@ -158,7 +156,7 @@
  }
 
  .fa-colors {
-  color: rgba(255, 255, 255, 0.383) !important;
+  color: rgb(255, 255, 255) !important;
 }
 }
 
@@ -353,7 +351,7 @@ details summary::-webkit-details-marker {
   left: 0;
   padding: 5%;
   overflow: hidden;
-  width: 100%;
+  width: 96%;
   z-index: 2;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -414,7 +412,10 @@ details summary::-webkit-details-marker {
     padding-left: 1%;
 
  }
- .team-details
+ .overlay {
+  height: 98%;
+ }
+ .team-img:hover .team-details
  {max-width: 90%;}
  .team-member{
   padding: 2% 10%;
