--- a/css/accueil.css
+++ b/css/accueil.css
@@ -421,7 +421,49 @@ details summary::-webkit-details-marker {
   padding: 2% 10%;
  }
 }
+/* ______________________________________NFT________________________________________*/
 
+#nft{
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 5% 10% 0% 10%;
+}
+.MuiGrid-root{ 
+  display: flex;
+  justify-content: center;
+width: 100%;
+}
+.MuiGrid-grid-md-6{
+  justify-content: center;
+}
+.px-2 {display: flex;
+flex-wrap: wrap;}
+
+.px-2 h1 {
+  margin-top:56px;
+  margin-bottom: -80px;}
+
+  @media all and (max-device-width:920px){
+    .MuiGrid-container{
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    justify-content: center;
+   }
+   .px-4{
+    justify-content: center;
+   }
+   .px-2 h1{
+margin-bottom: 0%;
+justify-content: center;
+   }
+   .px-2{
+
+  text-align: center;
+    justify-content: center;
+       }
+  }
+
+  
 /*_______________________________________________ROADMAP_________________________________________________________*/
 
 .roadmap {
