--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -152,7 +152,6 @@ width: 25%;
     align-items: center;
     justify-content: center;
     padding-right: 0%;
-    border: 2px dotted;
     cursor: pointer;
   
 }
@@ -261,11 +260,11 @@ margin: 1% 0% 2% 0%;
 
 footer{
     display: flex;
-    margin: 0;
+    margin-top: 3%;
     padding: 0% 3%;
-    background-color: #F2F2F2;
-    border-top-left-radius: 2.25rem;
-    border-top-right-radius: 2.25rem;
+  border-top: #fff 1px solid;  
+
+
 }
 
 .footleft{
@@ -306,16 +305,16 @@ footer{
 
 ul{
     margin-top: 0%;
-    color: black;
+    color: rgb(240, 240, 240);
 }
 
 ul h3{
     margin-top: 0%;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .footleft p{
-color: black;
+color: rgb(255, 255, 255);
 }
 
 .help{
@@ -325,7 +324,7 @@ color: black;
     
 }
 .help a{
-   color: black;
+   color: rgb(255, 255, 255);
   justify-content: flex-start;
    }
    .help h3{
@@ -396,7 +395,7 @@ color: black;
 }
 
 .help a{
-    color: black;
+    color: rgb(255, 255, 255);
    justify-content: center;
     }
 
